frontend/src/general-style.css
/* ... */
/*============================================================================
  INDEX SECTIONS GRID
==============================================================================*/
.index_sections {
	display: flex;
	flex-wrap: wrap;
}
.section-features {
	flex-basis: 33%;
	flex-grow: 1;
	padding: 35px;
	border-left: 1px solid #c4c4c4;
}
.section-features .med-nav-title {
	margin-top: 0;
}
.section-features:nth-child(1),
.section-features:nth-child(4) {
	flex-basis: calc(33% - 35px);
	padding-left: 0;
	border-left: 0;
}
.section-features:nth-child(-n + 3) {
	border-bottom: 1px solid #c4c4c4;
}
.section-features .section-featured-articles img {
	width: 100%;
	height: 150px;
	object-fit: cover;
	object-position: center;
	margin-bottom: 5px;
}

/*desktop*/
@media screen and (min-width: 768px) {
	.index_sections {
		display: flex;
		flex-wrap: wrap;
	}
	.section-features {
		flex-basis: 33%;
		flex-grow: 1;
		padding: 35px;
		border-left: 1px solid #c4c4c4;
	}
	.section-features .med-nav-title {
		margin-top: 0;
	}
	.section-features:nth-child(1),
	.section-features:nth-child(4) {
		flex-basis: calc(33% - 35px);
		padding-left: 0;
		border-left: 0;
	}
	.section-features:nth-child(-n + 3) {
		border-bottom: 1px solid #c4c4c4;
	}

	.section-features .section-featured-articles .section-article-excerpt-img {
		width: 100%;
		height: 0;
		padding-bottom: 67%;
		margin-bottom: 5px;
		border: none;
		position: relative;
	}
	.section-features .section-featured-articles .section-article-excerpt-img-wrapper {
		width: 100%;
		height: 100%;
		position: absolute;
		top: 0;
		left: 0;
	}
	.section-features .section-featured-articles .section-article-excerpt-img img {
		width: 100%;
		height: 100%;
		object-fit: cover;
		object-position: center;
	}
	.section-features .section-featured-articles > div {
		border-bottom: 1px solid #dddddd;
		padding: 5px 0;
	}

	.section-features .section-featured-articles > div:last-child {
		border-bottom: none;
	}
}


@media screen and (min-width: 768px) {
	*,
	*:before,
	*:after {
	  box-sizing: border-box;
	}

	body {
	  margin: 40px;
	  font-family: 'Open Sans', 'sans-serif';
	  background-color: #fff;
	  color: #444;
	}

	h1,
	p {
	  margin: 0 0 1em 0;
	}

	.wrapper {
	  max-width: 940px;
	  margin: 0 20px;
	 /* display: grid;*/
	  grid-gap: 0px;
	}


	/* no grid support? */

	.wrapper {
	  display: flex;
	  flex-wrap: wrap;
	  clear:both;
	}

	.wrapper {
	  display: grid;
	  margin: 0 auto;
	  grid-template-columns: 3fr 2fr;
	  grid-auto-rows: minmax(250px, auto);
	}

	/* Bottom right text */
	.text-block {
	  position: absolute;
	  bottom: 20px;
	  left: 0px;
	  padding-left: 20px;
	  padding-right: 20px;
	}

	.fill {
	    display: flex;
	    justify-content: center;
	    position: relative;
	    align-items: center;
	    overflow: hidden
	}
	.fill img {
	    flex-shrink: 0;
	    min-width: 100%;
	    height: 450px;
	    object-fit: cover;
	}

	.section-panel {
	  margin-left: 5px;
	  margin-right: 10px;
	  flex: 1 1 200px;
	  border-bottom: 1px solid #c4c4c4;
	  display: flex;
	}

	.section-panel .section-panel-img {
		max-width:160px;
		max-height:240px;
		width: auto;
		height: auto;
	}

	.section-panel .section-panel-img img {
		object-fit: cover;
		max-width: 100%;
		max-height: 100%;
	}

	.section-panel-text {
		float: right;
		margin-left: 20px;
	}

	.section-tall-panel {
		border-right: 1px solid #c4c4c4;
		border-bottom: 1px solid #c4c4c4;
		grid-row-end: span 2;
		margin-right: 8px;
	}


	.wrapper > * {
		padding: 20px;
		font-size: 150%;
		margin-bottom: 10px;
	}


	/* We need to set the margin used on flex items to 0 as we have gaps in grid.  */

	@supports (display: grid) {
	  .wrapper > * {
	    margin: 0;
	  }
	}

}



/*tablet*/
@media screen and (max-width: 1170px) and (min-width: 768px) {
	.section-features {
		padding: 20px;
	}
	.section-features:nth-child(1),
	.section-features:nth-child(4) {
		flex-basis: calc(33% - 20px);
	}

	@media screen and (max-width: 850px) {
		.section-features {
			flex-basis: 50%;
			border-bottom: 1px solid #c4c4c4;
		}
		.section-features:nth-child(4) {
			flex-basis: 50%;
			padding: 20px;
			border-left: 1px solid #c4c4c4;
		}
		.section-features:nth-child(1),
		.section-features:nth-child(3),
		.section-features:nth-child(5) {
			flex-basis: calc(50% - 20px);
			padding-left: 0;
			border-left: 0;
		}
		.section-features:nth-child(5),
		.section-features:nth-child(6) {
			border-bottom: 0;
		}

	}

}

/*mobile*/
@media screen and (max-width: 767px) {
	.section-features {
		padding-top: 10px;
	}
	.section-featured-articles {
		background-color: white;
		padding: 15px;
	}
	.section-featured-articles .section-article-excerpt {
		padding: 20px 0;
		border-bottom: 1px solid #ddd;
		clear: both;
	}
	.section-featured-articles .section-article-excerpt:nth-child(2) {
		clear: none;
		min-height: 140px;
		padding-top: 0;
	}
	.section-featured-articles .section-article-excerpt:last-child {
		border-bottom: none;
		padding-bottom: 0;
	}
	.section-featured-articles .section-article-excerpt-img {
		width: 50%;
		height: 120px;
		float: right;
		overflow: hidden;
		padding-left: 15px;
	}
	.section-featured-articles .section-article-excerpt-img img {
		width: 100%;
		height: 100%;
		object-fit: cover;
	}
}


/*============================================================================
  NonSports
==============================================================================*/

.nonsports-column {
	display: inherit;
	flex-wrap: wrap;
	flex-basis: 33%;
	flex-grow: 1;
	padding: 20px;
	padding-bottom: 0px;
	padding-top: 0px;
	font-family: 'Avenir Medium', sans-serif;
	overflow: hidden;
	flex-basis: calc(33% - 35px);
	border-bottom: 1px solid #c4c4c4;
}

.nonsports-column .content{
	font-weight: 700;
	font-size: 30px;
	margin-bottom: 25px;
	margin-top: 25px;
}
/* ... */

